# memory-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ghcr.yml
sql/: schema.sql
src/memory_mcp/: __init__.py  __main__.py  config.py  db.py  embedder.py  metrics.py  server.py
src/memory_mcp/tools/: __init__.py  batch.py  entities.py  graph.py  recent.py  relations.py  search.py
