[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.3"
description = "Knowledge-graph MCP server backed by Postgres + pgvector (vchord)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "memory", "knowledge-graph", "ai", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "fastmcp>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
memory-mcp = "memory_mcp.__main__:main"
memory-mcp-web = "memory_mcp.__main__:main_web"

[project.urls]
Homepage = "https://github.com/rwlove/memory-mcp"
Issues = "https://github.com/rwlove/memory-mcp/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
